Add mobile viewport meta

--- a/spa-example/fixed.html
+++ b/spa-example/fixed.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>React router example (fixed)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>SPA (fixed)</title>
 <script src="https://unpkg.com/react@%5E16.8.4/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@%5E16.8.4/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
