--- a/spa-example/original.html
+++ b/spa-example/original.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>SPA example</title>
 <script src="https://unpkg.com/react@%5E16.8.4/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@%5E16.8.4/umd/react-dom.development.js"></script>
