--- a/spa-example/fixed.html
+++ b/spa-example/fixed.html
@@ -30,6 +30,7 @@ html, body {
   padding: 0;
   margin: 0;
   color: var(--neutral-1);
+  font-face: sans-serif;
 }
 
 #container {
@@ -68,6 +69,7 @@ html, body {
   overflow-x: hidden;
   background: var(--neutral-10);
   transition: transform 300ms ease;
+  will-change: transform;
 }
 .tab-panel.active {
   transform: none;
@@ -77,7 +79,6 @@ html, body {
   pointer-events: none;
   transform: translate(100%);
   transition-delay: 300ms;
-  will-change: transform;
 }
 .tab-panel > p {
   padding: 0 1em;
