--- a/notes/notes.html
+++ b/notes/notes.html
@@ -150,7 +150,9 @@ body, html {
   background: transparent;
   border: none;
   width: 100%;
-  resize: vertical;
+  min-height: 100px;
+  resize: none;
+  outline: none;
 }
 
 @supports (display: grid) {
